# sentiment_classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  application.py  buildspec.yml  pyproject.toml
notebooks/: EDA.ipynb  model_training.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: inference_pipeline.py  training_pipeline.py
templates/: home.html
