[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jorge Alexander Fajardo <joralex0826@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
xgboost = "^3.0.1"
optuna = "^4.3.0"
numpy = "^2.2.5"
dill = "^0.4.0"
scipy = "^1.15.3"
flask = "^3.1.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"